test/corpus/binary_expression.txt
==================
Number Expressions
==================

1 + 2

---


(program
  (expression
    (binary_expression
      (plus_expression
        (expression
          (number))
        (expression
          (number))))))
