test/corpus/function_parameters.txt
===============================
Functions
===============================

fn main(age: number, id: number) {}

---
(program
    (function_declaration
        (identifier)
        (parameters
            (parameter
                (identifier)
                (type_anotation))
            (parameter
                (identifier)
                (type_anotation)))
        (block)))
