test/corpus/number_expression_complex.txt
====================================
Number Expressions Complex
====================================

12 + 1 - 1

---
(program
  (binary_expression
    (minus_expression
      (binary_expression
        (plus_expression
          (number)
          (number)))
      (number))))
